--- a/pom.xml
+++ b/pom.xml
@@ -15,18 +15,18 @@
 
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <wagon-maven-plugin.version>2.0.2</wagon-maven-plugin.version>
-        <openapi-generator-maven-plugin.version>6.6.0</openapi-generator-maven-plugin.version>
+        <openapi-generator-maven-plugin.version>7.0.0</openapi-generator-maven-plugin.version>
 
-        <junit-jupiter.version>5.10.0-M1</junit-jupiter.version>
-        <restassured.version>5.3.0</restassured.version>
+        <junit-jupiter.version>5.10.0</junit-jupiter.version>
+        <restassured.version>5.3.2</restassured.version>
         <asssertj-core.version>3.24.2</asssertj-core.version>
-        <datafaker.version>1.9.0</datafaker.version>
-        <lombok.version>1.18.26</lombok.version>
-        <jackson-databind.version>2.15.1</jackson-databind.version>
-        <swagger-annotations.version>2.2.10</swagger-annotations.version>
+        <datafaker.version>2.0.1</datafaker.version>
+        <lombok.version>1.18.28</lombok.version>
+        <jackson-databind.version>2.15.2</jackson-databind.version>
+        <swagger-annotations.version>2.2.15</swagger-annotations.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <jsr305.version>3.0.2</jsr305.version>
-        <jackson-datatype-jsr310.version>2.15.1</jackson-datatype-jsr310.version>
+        <jackson-datatype-jsr310.version>2.15.2</jackson-datatype-jsr310.version>
         <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
     </properties>
 
@@ -36,8 +36,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.10.0-M1</version>
-            <scope>${junit-jupiter.version}</scope>
+            <version>${junit-jupiter.version}</version>
         </dependency>
 
         <dependency>
